# Projet-ML-Sea3

./: .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Procfile  README.md  app.py  pyproject.toml  requirements.txt  setup.py  start.bat  start.sh  vercel.json  wsgi.py
api/: index.py
app/: app.py
