[project]
name = "projet-ml-sea3"
version = "0.1.0"
description = ""
authors = [{name = "sossou", email = "orsinimelchisedek@gmail.com"}]

dependencies = [
    "python>=3.8",
    "flask"
]

[project.scripts]
app = "app:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
