[project]
name = "projet-ml-sea3"
version = "0.1.0"
description = ""
authors = [{name = "sossou", email = "orsinimelchisedek@gmail.com"}]
requires-python = ">=3.8"

dependencies = [
    "aniso8601",
    "annotated-types",
    "anyio",
    "argon2-cffi",
    "argon2-cffi-bindings",
    "arrow",
    "asttokens",
    "async-lru",
    "attrs",
    "babel",
    "beautifulsoup4",
    "bidict",
    "bleach",
    "blinker",
    "branca",
    "cachelib",
    "certifi",
    "cffi",
    "charset-normalizer",
    "clamd",
    "click",
    "colorama",
    "comm",
    "contourpy",
    "curl_cffi",
    "cycler",
    "debugpy",
    "decorator",
    "defusedxml",
    "Deprecated",
    "et_xmlfile",
    "executing",
    "Flask",
    "Flask-Caching",
    "Flask-JWT-Extended",
    "Flask-Limiter",
    "Flask-Login",
    "flask-restx",
    "Flask-SocketIO",
    "Flask-SQLAlchemy",
    "Flask-WTF",
    "folium",
    "fonttools",
    "fqdn",
    "frozenlist",
    "gunicorn",
    "greenlet",
    "h2",
    "hpack",
    "hstspreload",
    "httpcore",
    "hyperframe",
    "idna",
    "importlib_resources",
    "iniconfig",
    "ipykernel",
    "ipython",
    "ipython_pygments_lexers",
    "ipywidgets",
    "isoduration",
    "itsdangerous",
    "jedi",
    "Jinja2",
    "joblib",
    "json5",
    "jsonpointer",
    "jsonschema",
    "jsonschema-specifications",
    "jupyter",
    "jupyter-console",
    "jupyter-events",
    "jupyter-lsp",
    "jupyter_client",
    "jupyter_core",
    "jupyter_server",
    "jupyter_server_terminals",
    "jupyterlab",
    "jupyterlab_pygments",
    "jupyterlab_server",
    "jupyterlab_widgets",
    "kiwisolver",
    "lark",
    "limits",
    "MarkupSafe",
    "matplotlib",
    "matplotlib-inline",
    "mistune",
    "multitasking",
    "narwhals",
    "nbclient",
    "nbconvert",
    "nbformat",
    "nest-asyncio",
    "notebook",
    "notebook_shim",
    "numpy",
    "openpyxl",
    "ordered-set",
    "packaging",
    "pandas",
    "pandocfilters",
    "parso",
    "patsy",
    "peewee",
    "Pillow",
    "platformdirs",
    "plotly",
    "pluggy",
    "prometheus_client",
    "prompt_toolkit",
    "protobuf",
    "psutil",
    "psycopg2-binary",
    "pure_eval",
    "pycparser",
    "Pygments",
    "PyJWT",
    "pyparsing",
    "pytest",
    "pytest-flask",
    "python-dateutil",
    "python-dotenv",
    "python-engineio",
    "python-json-logger",
    "python-socketio",
    "pytz",
    "pywin32",
    "pywinpty",
    "PyYAML",
    "pyzmq",
    "redis",
    "referencing",
    "reportlab",
    "requests",
    "rfc3339-validator",
    "rfc3986-validator",
    "rfc3987-syntax",
    "rpds-py",
    "scikit-learn",
    "scipy",
    "Send2Trash",
    "setuptools",
    "simple-websocket",
    "six",
    "soupsieve",
    "SQLAlchemy",
    "stack-data",
    "statsmodels",
    "terminado",
    "threadpoolctl",
    "tinycss2",
    "tornado",
    "traitlets",
    "types-python-dateutil",
    "typing-inspection",
    "typing_extensions",
    "tzdata",
    "uri-template",
    "urllib3",
    "wcwidth",
    "webcolors",
    "webencodings",
    "websocket-client",
    "websockets",
    "Werkzeug",
    "widgetsnbextension",
    "wrapt",
    "wsproto",
    "WTForms",
    "xgboost",
    "xyzservices",
    "yfinance"
]

[project.scripts]
app = "app:app"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
