[project]
name = "projet-ml-sea3"
version = "0.1.0"
description = "Application Flask pour l'analyse de données et prévisions ML"
authors = [{name = "Sossou Melchisedek", email = "orsinimelchisedek@gmail.com"}]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}

keywords = ["flask", "machine-learning", "data-analysis", "predictions", "statistics"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

dependencies = [
    "Flask>=2.2.5,<3.0",
    "Flask-Caching>=2.3.0",
    "Flask-JWT-Extended>=4.7.0",
    "Flask-Limiter>=4.1.0",
    "Flask-Login>=0.6.0",
    "flask-restx>=1.3.0",
    "Flask-SocketIO>=5.5.0",
    "Flask-SQLAlchemy>=3.1.0",
    "Flask-WTF>=1.2.0",
    "Werkzeug>=2.2.0,<3.0",
    "gunicorn>=23.0.0",
    "SQLAlchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "numpy>=2.3.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.16.0",
    "statsmodels>=0.14.0",
    "xgboost>=3.1.0",
    "matplotlib>=3.10.0",
    "plotly>=6.3.0",
    "folium>=0.20.0",
    "yfinance>=0.2.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.0",
    "redis>=5.0.0",
    "argon2-cffi>=25.1.0",
    "PyJWT>=2.10.0",
    "WTForms>=3.1.0",
    "openpyxl>=3.1.0",
    "Pillow>=11.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-flask>=1.3.0",
    "pytest-cov>=4.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "ipython>=9.6.0",
    "ipykernel>=6.30.0",
]

[project.scripts]
flask-ml-app = "app:create_app"

[project.urls]
Homepage = "https://github.com/yourusername/Projet-ML-SEA3"
Repository = "https://github.com/yourusername/Projet-ML-SEA3"
Documentation = "https://github.com/yourusername/Projet-ML-SEA3#readme"
"Bug Tracker" = "https://github.com/yourusername/Projet-ML-SEA3/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["app"]

[tool.setuptools.package-data]
app = ["static/**/*", "templates/**/*"]

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=app",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]